refactor: move types into relevant modules and fix some type annotations
